* Rewrote CSS prefix handler to be a bit more specific on each rule. Most notably, the previous version didn't correctly set up box shadows on IE9, it should at least fix that. (Subs-Cache.php) * Detail. (Worg/index.css)

--- a/Themes/default/skins/Worg/index.css
+++ b/Themes/default/skins/Worg/index.css
@@ -838,6 +838,7 @@ li.separator
 
 .menu .note
 	gradient: lighten(#d55a61, 10%), lighten(#b63c47, 10%)
+	font-size: 80%
 	float: right
 	padding: 4px 5px 5px
 	margin: -1px -4px 0 8px
